# LPU-Wireless-Autologin

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  install.sh  main.sh
.github/workflows/: create_release.yml  release.yml  rust.yml
docs/: CNAME  ba3a.llogin.plist  install.ps1
src/: main.rs  types.rs  utils.rs
