[package]
name = "llogin"
version = "1.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
dirs = "6.0.0"
requestty = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
toml = "0.8.20"
ureq = { version = "^2.6", features = ["native-tls"] }
